test/de.cau.cs.kieler.klighd.test/sizeEstimationTests/failing/gridPlacementChildArea01.kgt

knode {
	properties: de.cau.cs.kieler.borderSpacing = 0.0 de.cau.cs.kieler.spacing =
	0.0 knode {
		size: width = 10 height = 10
		kroundedRectangle (10, 10) {
			styles: foreground = 255r, 255g
		}
	}
	krectangle {
		grid: columns = 1
		kellipse {
			ktext ("HUGOHUGO")
		}
		kellipse {
			styles: background = 255r
			kchildArea
		}
	}
}